@@ -10,6 +10,11 @@
 	before the empty string() because now, binary() is the primary data
 	type in exmpp.
 
+	* src/core/exmpp_stream.erl: Fix documentation. Add contracts. Remove
+	?STREAM_NS_PREFIX in favor of ?NS_XMPP_pfx. To obtain a random ID, use
+	the 'random' atom, not 'undefined' as before.
+	(serialize_version/1): Return a binary() for consistency's sake.
+
 2009-04-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/core/exmpp_presence.erl: Add contracts. Fix documentation.
